--- a/shonen/one-piece.html
+++ b/shonen/one-piece.html
@@ -6,29 +6,29 @@
     <meta name="keywords" content="anime,one piece">
     <meta name="author" content="carlos carrillo">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/one-piece.ico" type="image/x-icon">
     <title>One Piece</title>
 </head>
 
 <body>
 
-    <header>
+    <header class="header fondo">
         <h1>One Piece</h1>
     </header>
 
-    <nav>
+    <nav class="nav">
 
         <li><a href="../index.html">Inicio</a></li>
-        <a href="./bleach.html">Bleach</a>
-        <a href="./naruto.html">Naruto</a>
-        <a href="./naruto-shippuden.html">Naruto Shippuden</a>
-        <a href="./one-piece.html">One Piece</a>
+        <li><a href="./bleach.html">Bleach</a></li>
+        <li><a href="./naruto.html">Naruto</a></li>
+        <li><a href="./naruto-shippuden.html">Naruto Shippuden</a></li>
+        <li><a href="./one-piece.html">One Piece</a></li>
 
     </nav>
 
-    <main>
+    <main class="principal">
 
-        <div>
+        <div class="principal__caja">
 
             <a href="#h">
                 <h3>One Piece</h3>
@@ -42,9 +42,9 @@
 
     </main>
 
-    <section>
+    <section class="sagas arcos">
 
-        <article>
+        <article class="article">
 
             <h3>Saga Del East Blue</h3>
             <p></p>
@@ -85,9 +85,9 @@
 
     </section>
 
-    <section>
+    <section class="terminos">
 
-        <article>
+        <article class="article">
 
             <h3>Terminos claves</h3>
             <p>
@@ -189,9 +189,9 @@
 
     </div>
 
-    <section>
+    <section class="relleno">
 
-        <article>
+        <article class="article">
 
             <h3>relleno</h3>
             <p></p>
