--- a/shonen/one-piece.html
+++ b/shonen/one-piece.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,39 +48,176 @@
         <article class="article">
 
             <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <p>es la primera saga de one piece cuenta con 61 episodios en los cuales estan divididos en 6 arcos.
+                publicados en el año de 1999 hasta el momento, es el comienzo de los mugiwara y afrontan retos
+                un poco complicados que surgen en la aventura. esta primera parte esta ambientada en el mar del este
+                y su principal enfoque es ir a la gran ruta maritima (paradise), cumplir sus sueños es su meta y
+                alcanzar el one piece.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h4>arco romance dawn</h4>
+            <p>es el primer arco de one piece cuenta con 3 episodios que van del 1 al 3, siendo el inicio de la tripulacion todo 
+                parece  ser un giro al azar que se complementa con koby, nami y zoro, se introducen las frutas del diablos
+                junto con el haki, se da a conocer la marina y el gobierno mundial.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h4>arco de ciudad orange</h4>
+            <p>segundo arco de one piece cuenta con 5 episodios que van del 4 al 8, relata el encuentro con el capitan buggy
+             y se da a conocer mas informacion de las frutas del diablo, es un arco donde se evidencia la lealtad y sobre todo
+             el vinculo de buggy con shanks que tomara mucha relevancia por compartir tripulacion con el rey de los piratas.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h3>arco romance down</h3>
-            <p></p>
+            <h4>arco de villa syrup</h4>
+            <p>tercer arco de one piece cuenta con 10 episodios que van del 9 al 18, la historia se centra en conseguir un barco
+            capaz de navegar por la gran ruta maritima y para eso necesitan ir por usopp que mas adelante se vuelve un miembro muy 
+            importante por su gran punteria e inventos que ayudaran mucho en batallas.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h3>arco romance down</h3>
-            <p></p>
+            <h4>arco del baratie</h4>
+            <p>cuarto arco de one piece cuenta con 12 episodios que van del 19 al 30, despues de conseguir al going merry go y entender
+            mas de la geografia luffy se preocupa por tener a un cocinero en su tripulacion y dada la situacion van al baratie, su llegada
+            no fue del todo formal aun asi conoce a sanji donde ellos 2 platican sobre sus sueños, la historia como tal da un giro inesperado
+            y todo no resulta del todo bien.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h4>arco arlong park</h4>
+            <p>quinto arco de one piece cuenta con 14 episodios que van del 31 al 44, al enterarse de la traicion de nami los mugiwara deciden
+            ir por ella, pero lo que no saben es su tragico pasado y la deuda que debe pagar, mas adelante la raza gyojin tomara importancia
+            junto a su historia que revelara el odio hacia los humanos.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h4>arco loguetown</h4>
+            <p>sexto arco de one piece cuenta con 7 episodios que van del 45 al 53 y el 61, este arco es un acercamiento a la gran ruta maritima,
+            se da a conocer varios personajes con suma importancia, se intrujen las frutas tipo logia y la ejcucuion de gold d roger.
+            </p>
+
+            <h3>Saga arabasta</h3>
+            <p>segunda saga de one piece cuenta con 69 episodios que van del 62 al 130 y esta dividido en 5 arcos, esta saga se centra en ayudar
+            al reino reino de arabasta y adicional la aventura se torna muy compleja. cada arco va contando una historia que relaciona con otras mas 
+            adelante y es aqui donde se introducen personajes muy relevantes.
+            </p>
+
+            <h4>arco reverse mountain</h4>
+            <p>septimo arco de one piece cuenta con 2 episodios que van del 62 al 63, es un arco corto pero muy interesante, conocen la historia
+            de una ballena la cual espera su tripulacion, no solo se centra en conocer la historia se da mas informacion de la geografia y la ultima isla.
+            </p>
+
+            <h4>arco whisky peak</h4>
+            <p>octavo arco de one piece cuenta 4 episodios que van del 64 al 67, este arco se centra en la isla de los caza recompensas, despues de la 
+            calidad bienvenida, las intenciones no eran del todo buena, en la madruga se da la intensa batalla de zoro contra todos, en esta situacion
+            se da a conocer la princesa vivi y todo da un giro inesperado. este arco se introduce a nico robin.
+            </p>
+
+            <h4>diario de kobymeppo</h4>
+            <p>cuenta con 2 episodios que van del 68 al 69, si es una historia aparte que sucede en esta saga y se centra en los personajes koby y helmeppo,
+            es interesante ver porque se define su futuro como marine.
+            </p>
+
+            <h4>arco little garden</h4>
+            <p>noveno arco de one piece cuenta con 8 episodios que van del 70 al 77, despues de partir y seguir el rumbo del log pose terminan en esta isla 
+            un poco peculiar por ser muy antigua, se da a conocer la raza gigante y la historia de sus capitanes. 
+            </p>
+
+            <h4>arco de drum</h4>
+            <p>decimo arco de one piece cuenta con 14 episodios que van del 78 al 91, es un arco sentimental sobre todo por la historia de chopper y su reino.
+            se introducen personajes que a futuro son importante, este arco se centra en curar a nami y expulsar al rey wapol tras su regreso.
+            </p>
+
+            <h4>arco arabasta</h4>
+            <p>11 arco de one piece cuenta con 39 episodios que van del 92 al 130 y son necesario omitir los episodios: 98, 99 y 102. tras su llegada a arabasta
+            inicia la cuenta regresiva para salvar este reino y hacer que llueva de nuevo, la guerra civil es un hecho y tratar que no ocurra parece lejano.
+            </p>
+
+            <h3>saga skypiea</h3>
+            <p>tercera saga de one piece cuenta con 62 episodios que van del 144 al 206 y esta dividido en 2 arcos, su historia se centra en la isla del cielo,
+            todo lo que conlleva a encontrar la ciudad perdida y la supuesta nueva era que genera discusion sobre los piratas.
+            </p>
+
+            <h4>arco de jaya</h4>
+            <p>12 arco de one piece cuenta con 9 episodios que van del 144 al 152, navegando por la ruta, un barco cae del cielo, es esto posible se preguntaron,
+            al conocer la historia de jaya y tras pasar en situaciones complicadas, los sombreros de paja deciden ir al cielo, es esto posible?.
+            </p>
+
+            <h4>arco skypiea</h4>
+            <p>13 arco de one piece cuenta con 43 episodios que van del 153 al 195, llegando a skypiea todo empieza a cambiar, hay una lucha por territorio y su gobernante
+            le saca provecho a su gente para ir a cierto lugar, tocar la campana es su mision pero nada es facil, este arco tiene gran valor porque se revela informacion de 
+            la segunda arma anscentral y los poneglyph.
+            </p>
+
+            <h3>saga de water 7</h3>
+            <p>cuarta saga de one piece cuenta con 118 episodios que van del 207 al 325 y esta dividido en 4 arcos, esta saga tiene un proposito
+            el cual es salvar a nico robin del cP9, para lograrlo se enfrentan al gobierno mundial en una batalla complicada generando perdidas importante.
+            </p>
+
+            <h4>arco de long ring long land</h4>
+            <p>14 arco de one piece cuenta con 13 episodios que van 207 al 219 y son necesario omitir los episodios 213 al 216, es un arco que se basa en un juego de piratas
+            es divertido y un buen inicio para la saga.
+            </p>
+
+            <h4>regreso de foxy</h4>
+            <p>cuenta con 4 episodios que van del 225 al 228, es la continuidad del anterior arco, foxy decide recuperar su tripulacion con ayuda de luffy
+            en esto episodios se da a conocer los 3 poderes de la marina los almirante y uno de ellos es kuzan.
+            </p>
+
+            <h4>arco de water 7</h4>
+            <p>15 arco de one piece cuenta con 35 episodios que van del 229 al 263, todo no parece ir del todo bien tras su llegada franky se ve interesado
+            por la suma de dinero de los mugiwara, este arco se da a conocer muchas verdades y al final de este se dirigen a la puerta de la justicia.
+            </p>
+
+            <h4>arco enies lobby</h4>
+            <p>16 arco de one piece cuenta con 46 episodios que van del 264 al 312 y son necesario omitir los episodios 279 al 283, 291, 292 y 303. es uno 
+            de los arcos mas intensos de one piece era ganar o perder a nico robin, este arco revela muchas tecnicas de los mugiwara y su intenso combate lo hace
+            interesante.
+            </p>
+
+            <h4>arco regreso a water 7</h4>
+            <p>17 arco de one piece cuenta con 13 episodios que van del 313 al 325 y son necesario omitir los episodios 317 al 319. despues de la intensa batalla
+            regresan a water 7, los mugiwara se les pone recompensa a todos, se da informacion de los yonko y el episodio final es crucial para la historia.
+            </p>
+
+            <h3>saga thriller bark</h3>
+            <p>quinta saga de one piece ceunta con 59 episodios que van del 326 al 384 y solo tiene 1 arco, navegando terminan atrapando una trampa
+            de los 7 guerreros del mar que se especializa en robar sombras, esta saga ocurre en thriller bark el barco pirata mas grande del mundo.
+            </p>
+
+            <h4>arco thriller bark</h4>
+            <p>18 arco de one piece cuenta con 45 episodios que van del 337 al 381, este arco se centra en recuperar las sombra robadas y sobre todo salir del thriller bark
+            su genero es terrorifico y su ambiente agradable. ocurre en una noche y se da la noticia inesperada de ace.
+            </p>
+
+            <h3>saga guerra en la cumbre</h3>
+            <p>sexta saga de one piece cuenta con 132 episodios que van del 385 al 516 y esta dividido en 5 arcos, al llegar a la segunda mitad dela red line la situacion
+            cambia por completo, ace fue capturado y sera ejecutado es una lucha por el tiempo.
+            </p>
+
+            <h4>arco archipielago sabaody</h4>
+            <p>19 arco de one piece cuenta con 21 episodios que van del 385 al 405 y son necesario omitir los episodios 406 y 407, este arco representa a los dragones celestiales
+            una raza diferente a los humanos, para rescatar a camie generan un altercado que cambia el rumbo de la historia.
+            </p>
+
+            <h4>arco amazon lily</h4>
+            <p>20 arco de one piece cuenta con 14 episodios que van del 408 al 421, despues que lufy perdiera toda su tripulacion termina en la isla de las kuja donde peleara por su 
+            supervivencia, en este arco se entera del la ejecucion de ace y no pierde el tiempo para rescatarlo.
+            </p>
+
+            <h4>arco impel down</h4>
+            <p>21 arco de one piece cuenta con 27 episodios que van del 422 al 452 y son necesario omitir los episodios 426 al 429, un arco muy triste muchos sacrificios y la batalla intensa
+            para rescatar a ace, impel down cuenta con 6 niveles y cada uno es peor al anterior.
+            </p>
+
+            <h4>aventuras de cada sombrero de paja</h4>
+            <p>cuenta con 4 episodios que van del 453 al 456, en si se centra en dar mas informacion sobre el paradero de los mugiwara y los retos que deben afrontar para sobrevivir.</p>
+   
+            <h4>arco marineford</h4>
+            <p>22 arco de one piece cuenta con 33 episodios que van del 457 al 489 y es necesario omitir el episodio 457. empieza la guerra sin cuartel los piratas de barba blanca contra la marina
+            la intensa batalla y el numero de tropas deciden el futuro de la nueva era.
+            </p>
+
+            <h4>arco 3D2Y</h4>
+            <p>23 arco de one piece cuenta con 26 episodios que van del 490 al 516 y es necesario omitir el episodio 492. ultimo arco de paradise representa 3 dias sino 2 años, en el mismo lugar
+            donde fueron separados.
+            </p>
+
 
         </article>
 
@@ -119,7 +257,7 @@
 
     <div class="grid">
 
-       <h2>personajes claves</h2>
+        <h2>personajes claves</h2>
 
         <div class="grid__items">
 
@@ -194,19 +332,61 @@
         <article class="article">
 
             <h3>relleno</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <p>en esta seccion se muestra el relleno de one piece es poco pero no es necesario verlo, en cierto modo aqui estan los episodios que publican al ser pausado
+            el anime.
+            </p>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h3>saga Del East Blue</h3>
 
-            <h3>Saga Del East Blue</h3>
-            <p></p>
-            <h4>arco romance down</h4>
-            <p></p>
+            <h4>arco Del dragon milenario</h4>
+            <p>cuenta con 8 episodios que van del 54 al 61, primer arco de relleno de one piece por lo general su historia es buena.</p>
+
+            <h3>saga arabasta</h3>
+
+            <h4>arco de historias independientes</h4>
+            <p>cuenta con 5 episodios que van del 131 al 135, es la recopilacion de episodios anteriores no es recomendable ver.</p>
+
+            <h4>arco isla cabra</h4>
+            <p>cuenta con 3 episodios que van del 136 al 138, buena historia y pocos episodios su historia es buena.</p>
+
+            <h4>arco niebla arco iris</h4>
+            <p>cuenta con 5 episodios que van del 139 al 143, historia interesante pero no es necesario ver este arco de relleno.</p>
+
+            <h3>saga skypiea</h3>
+
+            <h4>arco del g-8</h4>
+            <p>cuenta con 11 episodios que van del 196 al 206, despues de irse de la isla del cielo terminan en la base del g-8, esto solo ocurre
+            en el anime y no es necesario de ver.
+            </p>
+
+            <h3>saga de water 7</h3>
+
+            <h4>arco de oceans dream</h4>
+            <p> cuenta con 5 episodios que van del 220 al 224, como tal es necesario omitir este arco pero en si su historia es buena.</p>
+
+            <h3>saga thriller bark</h3>
+
+            <h4>arco lovely land</h4>
+            <p>cuenta con 11 episodios que van del 326 al 336, es el inicio de la saga por ende es necesario omitir este arco.</p>
+
+            <h4>arco spa island</h4>
+            <p>cuenta con 3 episodios que van del 382 al 384, este arco es necesario omitirlo.</p>
+
+            <h3>saga dressrosa</h3>
+
+            <h4>arco ambicion de z</h4>
+            <p>cuenta con 4 episodios que van del 575 al 578, es la promocion de la pelicula que de hecho es mue buena.</p>
+
+            <h4>arco del rescate de caesar</h4>
+            <p>cuenta con 3 episodios que van del 626 al 628, es necesario omitir este arco.</p>
+
+            <h3>saga whole cake island</h3>
+
+            <h4>arco silver mine</h4>
+            <p>cuenta con 4 episodios que van del 747 al 750, es necesario omitir este arco.</p>
+
+            <h4>arco supernovas de la marina</h4>
+            <p>cuenta con 3 episodios que van del 780 al 782, es necesario omitir este arco.</p>
 
         </article>
 
@@ -215,31 +395,31 @@
     <div class="peliculas">
 
         <div class="peliculas__ova">
-         <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-          <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-       <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-          <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-        <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-        <h4>la</h4>
+            <h4>la</h4>
         </div>
 
         <div class="peliculas__ova">
-        <h4>la</h4>
+            <h4>la</h4>
         </div>
 
     </div>
