--- a/shonen/one-piece.html
+++ b/shonen/one-piece.html
@@ -218,6 +218,65 @@
             donde fueron separados.
             </p>
 
+            <h3>saga isla gyojin</h3>
+            <p>septima saga de one piece cuenta con 57 episodios que van del 517 al 574 y esta dividido en 2 arcos, depues de durar 2 años separados por fin se cumplio el tiempo de regresar la tripulacion
+            para ir al nuevo mundo, esta saga se centra en la isla gyojin y su historia profunda.
+            </p>
+
+            <h4>arco regreso a sabaody</h4>
+            <p>24 arco de one piece cuenta con 6 episodios que van del 517 al 522, este arco a pesar que dura poco es muy bueno, hay una banda que se hace pasar por los mugiwaras e influyen terror, esto genera
+            que los verdaderos se sientan incomodo tras su llegada.
+            </p>
+
+            <h4>arco isla gyojin</h4>
+            <p>25 arco de one piece cuenta con 51 episodios que van del 523 al 574 y es necesario omitir el episodio 542. al descender el archipielago sabaody llegan a la isla gyojin que esta a 10km de profundidad,
+            en la isla no todo es lo que parece sus habitantes les toca sufrir el abuso de los humanos y pagar el impuesto a un yonko.
+            </p>
+
+            <h3>saga dressrosa</h3>
+            <p>octava saga de one piece cuenta con 172 episodios que van del 575 al 746 y esta dividido en 2 arcos. su historia se centra en derrotar a doflamingo por sus conexiones con los piratas bestias
+            y detener la fabricacion de smile.
+            </p>
+
+            <h4>arco de punk hazard</h4>
+            <p>26 arco de one piece cuenta con 46 episodios que van del 579 al 625 y es necesario omitir el episodio 590. tras su llegada a nuevo mundo la isla que apuntaba era punk hazard, un laboratorio clandestino
+            que hacian experimentos y la fabricacion de smile. trafalgar hace la alianza con los mugiwara para derrotar a un yonko.
+            </p>
+
+            <h4>arco dressrosa</h4>
+            <p>27 arco de one piece cuenta con 118 episodios que van del 629 al 746, todo estaba planeado para derrotar a doflamingo pero la situacion cambia al enterarse que no es un simple pirata, tras su llegada al reino
+            sus habitantes ya tenian planeado derrocar al rey, tripulaciones del nuevo mundo se reunen por el evento que se celebra en el coliseo corrida y todos terminan atrapado compartiendo el mismo destino.
+            </p>
+
+            <h3>saga whole cake island</h3>
+            <p>novena saga de one piece cuenta con 131 episodios que van del 747 al 877 y esta dividido en 2 arcos. se centra en rescatar a sanji de la big mom y su matrimonio con una de sus hijas, la situacion no es del todo favorable por la familia de sanji
+            y el pequeño grupo que va a salvarlo.
+            </p>
+
+            <h4>arco de zou</h4>
+            <p>28 arco de one piece cuenta con 29 episodios que van del 751 al 779, despues de conocer la historia de los mink con la famlia kozuki, deciden hacer la alianza para salvar a el pais de wano, no si antes dividirse en grupos para realizar el plan.</p>
+
+            <h4>arco whole cake island</h4>
+            <p>29 arco de one piece cuenta con 95 episodios que van del 783 al 877, se centra en rescatar a sanji pero los piratas de la big mom tienen planeado apoderarse del germa 66, sin duda alguna es un arco con intensa batallas.</p>    
+
+            <h3>saga pais de wano</h3>
+            <p>decima saga de one piece cuenta con 211 episodios que van del 878 al 1085 y esta dividido en 2 arcos. como su nombre lo indica la alianza ya esta en wano preparados para derrotar a kaido
+            es la saga con mas episodios y su historia es muy buena.
+            </p>
+
+            <h4>arco del levely</h4>
+            <p>30 arco de one piece cuenta con 14 episodios que van del 878 al 891, este arco es recopilatorio y se centra en la levely mas adelante se revela lo sucedido y las desiciones tomada. </p>
+
+            <h4>arco pais de wano</h4>
+            <p>31 arco de one piece cuenta con 189 episodios que van del 892 al 1085 y es necesario omitir los episodios 895, 896, 907, 1029 y 1030. este arco va por segmentos y cada uno de ellos son buenos
+            la alianza decide iniciar con el plan aunque no sale del todo bien, su unico objetivo es acabar con kaido en el asalto a onigashima.
+            </p>
+
+            <h3>saga final</h3>
+            <p>ultima saga de one piece inicia en el episodio 1086 y va hasta el momento en el 1122, sus arcos estan en desarrollo y solo hay animado 1.</p>
+
+            <h4>arco egghead</h4>
+            <p>32 arco de one piece inicia en el episodio 1086 y hasta el momento va al 1122 en abril se reanuda.</p>
 
         </article>
 
