--- a/shonen/bleach.html
+++ b/shonen/bleach.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Bleach</title>
 </head>
+
 <body>
 
     <header>
@@ -26,20 +28,236 @@
     </nav>
 
 
-<main>
-    <div>
-        <h2>bleach</h2>
+    <main class="principal">
+        <div class="principal__caja">
+            <h3>bleach</h3>
+        </div>
+    </main>
+
+
+    <section class="sagas arcos">
+
+        <article class="article">
+
+            <h3>saga del shinigami sustituto</h3>
+            <p>es la primera saga de bleach cuenta con 20 episodios que van del 1 al 20, relata la historia de ichigo kurasaki un joven de 15 que puede ver los epiritus
+            se encuentra con una segadora de almas creando un vinculo, ichigo adquiere los poderes de segador no si antes sufrir las consecuencias.
+            </p>
+
+            <h3>saga de la sociedad de almas</h3>
+            <p>segunda saga de bleach cuenta con 43 episodios que van del 21 al 63 y es necesario omitir los episodios 33 y 50. se centra en salvar a rukia de ser ejecutada
+            ichigo y sus amigos se dirigen a salvarla pero no todo es lo que parece, generando una lucha interna dentro de la sociedad.
+            </p>
+
+            <h3>saga arrancar</h3>
+            <p>tercera saga de bleach cuenta con 34 episodios que van del 110 al 143 y es necesario omitir los episodios 128 al 137. aizen se vuelve el rey de hueco mundo y busca crear 
+            soldados fuertes, de aqui vienen los arrancar que son hollow sin mascara y adquieren poderes de segador.
+            </p>
+
+            <h3>saga del hueco mundo</h3>
+            <p>cuarta saga de bleach cuenta con 38 episodios que se dividen en dos partes. despues que orihime decidiera ir a hueco mundo, ichigo y sus amigos van a rescatarla generando duelos
+            riesgosos contra los espadas. <br> <br>
+            parte 1: 144 al 167 y es necesario omitir los episodios 147, 148 y 149. <br>
+            parte 2: 190 al 205 y es necesario omitir los episodios 204 y 205. <br>
+            </p>
+
+            <h3>saga del pasado</h3>
+            <p>quinta saga de bleach cuenta con 7 episodios que van del 206 al 212, se revela los sucedido con los visored en el pasado y la influencia de aizen sobre ellos.</p>
+
+            <h3>saga de la batalla de karakura</h3>
+            <p>sexta saga de bleach cuenta con 59 episodios que se dividen en dos partes. los epadas y segadores se enfrenta en una feroz batalla en la ciudad de karakura el plan de aizen parece dar resultado
+            pero no tiene en cuenta otros factores. <br> <br>
+            parte 1: 213 al 229 y es necesario omitir los episodios 213, 214, 227, 228 y 229. <br>
+            parte 2: 266 al 310 y es necesario omitir los episodios 266, 287, 298, 299, 303, 304 y 305. <br>
+            </p>
+
+            <h3>saga del agente perdido</h3>
+            <p>septima saga de bleach cuenta con 23 episodios que van del 343 al 366 y es necesario omitir el episodio 355. ichigo tras perder sus poderes de segador, un grupo que se hace llamar fullbringer entra en 
+            contacto con el, su proposito hacer que ichigo sea de nuevo un segador.
+            </p>
+
+            <h3>saga thousand-year blood war</h3>
+            <p>octava y ultima saga de bleach esta dividida en tres partes, se centra en los quincy y los segadores, la lucha que llevan mas de mil año y sus consecuencias.</p>
+
+            <h4>bleach: sennen kessen-hen</h4>
+            <p>primera parte de la saga cuenta con 13 episodios que van del 367 al 379. el seireitei no estaba preparado por la ofensiva de los quincy, reaparece el rey yhwach con un gran ejercito
+            desantando la guerra mas perjudicial.
+            </p>
+
+            <h4>bleach: sennen kessen-hen - ketsubetsu-tan</h4>
+            <p>segunda parte de la saga cuenta con 13 episodios que van del 380 al 392,</p>
+
+            <h4>bleach: sennen kessen-hen - soukoku-tan</h4>
+            <p>tercera parte de la saga </p>
+
+        </article>
+
+    </section>
+
+    <section class="terminos">
+
+        <article class="article">
+
+            <h3>Terminos claves</h3>
+            <p>
+            </p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p id="h"></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+        </article>
+
+    </section>
+
+    <div class="grid">
+
+        <h2>personajes claves</h2>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hols</li>
+                <li>oooo</li>
+                <li>nami</li>
+            </ul>
+
+        </div>
+
     </div>
-</main>
 
+    <section class="relleno">
 
-<section>
+    <article class="article">
 
-    <article>
-        <h3>saga del segador </h3>
+        <h3>relleno</h3>
+        <p>en esta seccion se muestra el relleno de bleach es poco pero no es necesario verlo, en cierto modo aqui estan los episodios que publican al ser pausado
+        el anime.
+        </p>
+
+        <h3>saga bount</h3>
+        <p>cuenta con 45 episodios que van del 64 al 109, en si la historia es un poco buena pero no es necesario de ver.</p>
+
+        <h3>saga del nuevo capitan shusuke amagai</h3>
+        <p>cuenta con 24 episodios que van del 168 al 189, relleno un poco largo, no es necesario de ver.</p>
+
+        <h3>saga cuentos desconocidos de las zanpakuto</h3>
+        <p>cuenta con 26 episodios que van del 230 al 256, en si no es necesario de ver este relleno.</p>
+
+        <h3>saga espadas bestias</h3>
+        <p>cuenta con 9 episodios que van del 257 al 265, en si no es necesario de ver este relleno.</p>
+
+        <h3>saga invasion armada al gotei 13</h3>
+        <p>cuenta con 32 episodios que van del 311 al 342. en si es un relleno pero hay que ver el episodio 342, porque es canon.</p>
+
     </article>
 
-</section>
+    </section>
+
+    <div class="peliculas">
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+    </div>
 
 </body>
+
 </html>
