--- a/shonen/naruto.html
+++ b/shonen/naruto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Naruto</title>
 </head>
+
 <body>
-    
+
     <header>
 
         <h1>Naruto</h1>
@@ -25,5 +27,248 @@
 
     </nav>
 
+    <main class="principal">
+        <div class="principal__caja">
+            <h3>naruto</h3>
+        </div>
+    </main>
+
+    <section class="sagas arcos">
+
+        <article class="article">
+
+            <h3>arco pais de la olas</h3>
+            <p>es el primer arco de naruto cuenta con 19 episodios que van del 1 al 19, la historia inicia con naruto uzumaki un niño huerfano que tiene al zorro de las nueves colas
+            como tal vive solo y siempre se esfuerza para caerle bien a las personas. conoce a sakura y sasuke siendo ellos sus amigos y conformando el equipo 7 junto a kakashi.
+            este arco se centra en conocer los personajes principales y el sistema ninja que los rodea.
+            </p>
+
+            <h3>arco examenes chunin</h3>
+            <p>segundo arco de naruto cuenta con 48 episodios que van del 20 al 67 y es necesario omitir el episodio 26. como su nombre indica para hacer un ninja calificado
+            deben de subir de rango por ello se realiza el examen que cuenta con multiples facetas y solo unos pocos lo logran pasar.
+            </p>
+
+            <h3>arco destruccion de konoha</h3>
+            <p>tercer arco de naruto cuenta con 13 episodios que van del 68 al 80, durante la utima faceta del examen la aldea de la arena decide atacar junto con orochimaru,
+            el tercer hokage defiende con todo a konoha siendo esto un terrible desenlace.
+            </p>
+
+            <h3>arco busqueda de tsunade</h3>
+            <p>cuarto arco de naruto cuenta con 20 episodios que van del 81 al 100 y es necesario omitir el episodio 97. despues de la muerte del tercer hokage, la aldea esta en crisis
+            por no tener candidatos a hokage, al citar a jiraiya el recomienda a la sannin tsunade para ser la quinta kokage.
+            </p>
+
+            <h3>arco mision de recuperacion de sasuke</h3>
+            <p>quinto y ultimo arco de naruto cuenta con 29 episodios que van del 107 al 135, tras la ida de sasuke los demas equipos deciden ir por el siendo esta
+            la mision mas complicada, orochimaru manda a sus shinobi para retrasar la ofensiva dando como resultado la derrota de konoha.
+            </p>
+
+
+        </article>
+
+    </section>
+
+    <section class="terminos">
+
+        <article class="article">
+
+            <h3>Terminos claves</h3>
+            <p>
+            </p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p id="h"></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+        </article>
+
+    </section>
+
+    <div class="grid">
+
+        <h2>personajes claves</h2>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hols</li>
+                <li>oooo</li>
+                <li>nami</li>
+            </ul>
+
+        </div>
+
+    </div>
+
+    <section class="relleno">
+
+        <article class="article">
+
+            <h3>relleno</h3>
+            <p>en esta seccion se muestra el relleno de naruto, en si va despues de la adaptacion del manga. no es recomendable ver por lo largo que es
+            y por la secuela que es mejor iniciarla.
+            </p>
+
+            <h4>arco mision de escolta en el pais del te</h4>
+            <p>cuenta con 6 episodios que van del 101 al 106, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de ivestigacion en el pais de los campos de arroz</h4>
+            <p>cuenta con 6 episodios que van del 136 al 141, en si no es necesario de ver este relleno, por su larga duracion y es el inicial cuando acaba la adaptacion.</p>
+
+            <h4>arco mision de rastreo de mizuki</h4>
+            <p>cuenta con 6 episodios que van del 142 al 147, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de busqueda del bikochu</h4>
+            <p>cuenta con 4 episodios que van del 148 al 151, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de eliminacion de la familia kurosuki</h4>
+            <p>cuenta con 6 episodios que van del 152 al 157, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de la captura de gosunkugi</h4>
+            <p>cuenta con 3 episodios que van del 158 al 160, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de exterminacion del guerrero fanstasma</h4>
+            <p>cuenta con 7 episodios que van del 161 al 167, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de captura de kaima</h4>
+            <p>cuenta con 6 episodios que van del 168 al 173, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de excavacion del oro enterrado</h4>
+            <p>cuenta con 3 episodios que van del 174 al 176, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de guardia de la estrella</h4>
+            <p>cuenta con 7 episodios que van del 177 al 183, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de escolta de los vendedores ambulantes</h4>
+            <p>cuenta con 8 episodios que van del 184 al 191, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco la tercera bestia verde</h4>
+            <p>cuenta con 5 episodios que van del 192 al 196, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de planes de recaptura de konoha</h4>
+            <p>cuenta con 5 episodios que van del 197 al 201, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de rescate de yakumo kurama</h4>
+            <p>cuenta con 6 episodios que van del 202 al 207, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de escolta de gantetsu</h4>
+            <p>cuenta con 5 episodios que van del 208 al 212, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de la busqueda de la memoria de menma</h4>
+            <p>cuenta con 3 episodios que van del 213 al 215, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco mision de apoyo a sunagakure</h4>
+            <p>ultimo arco de relleno de naruto cuenta con 5 episodios que van del 216 al 220, en si no es necesario de ver este relleno.</p>
+
+
+        </article>
+
+    </section>
+
+    <div class="peliculas">
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
